--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "import-data": "node scripts/importSanityData.mjs"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@sanity/client": "^6.24.4",
     "@sanity/image-url": "^1.1.0",
@@ -24,13 +27,15 @@
     "next-sanity": "^9.8.37",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.3",
     "sanity": "^3.70.0",
     "styled-components": "^6.1.14",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20",
